ecmascript/parser/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral8/input.ts.stderr
error[1109]: Expected an expression
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral8/input.ts:2:1
  |
2 | -03
  | ^

error[1085]: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/typescript-errors/tsc/scanner/ecmascript5/scannerNumericLiteral8/input.ts:2:2
  |
2 | -03
  |  ^^

